--- a/home/templates/home/dashboard/staff_community_progress.html
+++ b/home/templates/home/dashboard/staff_community_progress.html
@@ -17,11 +17,11 @@
 	{% for project in p.project_set.all %}
 		{% with applicants=project.get_applicants_and_contributions_list %}
 			<tr>
-				<td>{% if p.approval_status != p.APPROVED %}{{ p.community.name }}{% else %}<a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=p.community.slug %}">{{ p.community.name }}</a>{% endif %}</td>
+				<td>{% if not p.is_approved %}{{ p.community.name }}{% else %}<a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=p.community.slug %}">{{ p.community.name }}</a>{% endif %}</td>
 				<td>{{ p.get_approval_status_display }}</td>
-				<td>{% if p.approval_status == p.APPROVED and project.approval_status == project.APPROVED %}<a href="{{ project.get_applicants_url }}">{{ project.short_title }}</a>{% else %}{{ project.short_title }}{% endif %}</td>
+				<td>{% if p.is_approved and project.is_approved %}<a href="{{ project.get_applicants_url }}">{{ project.short_title }}</a>{% else %}{{ project.short_title }}{% endif %}</td>
 				<td>{{ project.get_approval_status_display }}</td>
-			{% if project.approval_status != project.APPROVED or not applicants %}
+			{% if not project.is_approved or not applicants %}
 				<td> - </td>
 				<td> - </td>
 				<td> - </td>
@@ -36,7 +36,7 @@
 		{% endwith %}
 	{% empty %}
 			<tr>
-				<td>{% if p.approval_status != p.APPROVED %}{{ p.community.name }}{% else %}<a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=p.community.slug %}">{{ p.community.name }}</a>{% endif %}</td>
+				<td>{% if not p.is_approved %}{{ p.community.name }}{% else %}<a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=p.community.slug %}">{{ p.community.name }}</a>{% endif %}</td>
 				<td>{{ p.get_approval_status_display }}</td>
 				<td>No Projects</td>
 				<td> - </td>
