--- a/home/templates/home/preview/coordinatorapproval.html
+++ b/home/templates/home/preview/coordinatorapproval.html
@@ -17,7 +17,7 @@
 
 <p>"{{ c.public_name }}" &lt;{{ c.account.email }}&gt;</p>
 
-{% if coordinatorapproval.approval_status == coordinatorapproval.PENDING %}
+{% if coordinatorapproval.is_pending %}
 {% if coordinatorapproval|is_approver:request.user %}
 <a href="{{ coordinatorapproval.get_approve_url }}" class="btn btn-success">Approve Coordinator</a>
 <a href="{{ coordinatorapproval.get_reject_url }}" class="btn btn-warning">Reject Coordinator</a>
