--- a/home/templates/home/preview/mentorapproval_action.html
+++ b/home/templates/home/preview/mentorapproval_action.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 {% with mentor=mentorapproval.mentor project=mentorapproval.project community=mentorapproval.project.project_round.community %}
-{% if view.kwargs.action|title == 'Submit' and mentorapproval.approval_status == mentorapproval.APPROVED %}
+{% if view.kwargs.action|title == 'Submit' and mentorapproval.is_approved %}
 	<p><a href="{% url 'community-cfp' %}">Timeline and FAQ for Outreachy Communities</a> &gt;
 	<a href="{{ project.project_round.get_absolute_url }}">{{ project.project_round.community.name }}</a> &gt;
 	Submit or Edit a Project
