--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -188,11 +188,16 @@ Outreachy eligibility results
 	Your initial application for Outreachy internships is being reviewed by the Outreachy organizers.
 	We have already received a notification about your initial application, and there is no need for you to send an additional email.
        	We may follow up with additional questions for you via email.
-	You will receive an email when your initial application has been approved.
 	</p>
 	<p>
-	You submitted your application on {{ application.submission_date }}. If you have not received a follow up email within 10 business days,
-	please <a href="/contact">contact the Outreachy organizers</a>.
+	All accepted applicants will recieve an email notification by {{ current_round.contributions_open }}.
+	Accepted applicants will then move onto the contribution phase. During the contribution phase, applicants make contributions to Outreachy projects.
+	</p>
+	<p>
+	We encourage you to read our applicant and intern documentation while you're waiting for your initial application results.
+	</p>
+	<p>
+	You submitted your application on {{ application.submission_date }}.
 	</p>
 	<p>You will not be able to record contributions or make a final application until your initial application has been approved.
 	Do not try to contact mentors or community coordinators until your initial application has been approved.</p>
