Community cfp: fix closing </p>

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -34,7 +34,7 @@ Call for Outreachy community coordinators and mentors
 {% include "home/snippet/foss-terms.html" %}
 
 <h2>Outreachy roles</h2>
-<p>There are several different Outreachy roles:<p>
+<p>There are several different Outreachy roles:</p>
 {% include "home/snippet/roles.html" %}
 
 <h2>Who can participate?</h2>
