Break out snippets for the diversity statement and eligibility rules

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -12,18 +12,11 @@
 
 <h2>Outreachy Supports Diversity in Tech</h2>
 
-<p>Outreachy expressly invites applicants who are women (both cis and trans), trans men, and genderqueer people to apply. We also expressly invite applications who are residents and nationals of the United States of America of any gender who are Black/African American, Hispanic/Latin@, Native American/American Indian, Alaska Native, Native Hawaiian, or Pacific Islander. Anyone who faces systemic bias or discrimination in the technology industry of their country is invited to apply.</p>
+{% include 'home/snippet/diversity_statement.html' %}
 
 <h2>Outreachy Eligibility Rules</h2>
 
-<p>Outreachy is open to applicants around the world. You will need to meet the following requirements:</p>
-<ul>
-	<li>You are or will be 18 years of age or older by {{ current_round.internstarts }}</li>
-	<li>You have not previously participated in an Outreachy, Outreach Program for Women, or Google Summer of Code internship. People who participated as an intern for Google Summer of Code are not eligible for Outreachy. All Google Summer of Code participants are ineligible for Outreachy, including people who did not successfully finish their GSoC internship.</li>
-	<li>You are available for a full-time, 40 hours a week internship from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
-	<li>Outreachy is open to both students and people who are not students. {% include 'home/snippet/student_hemisphere.html' %} If you are completing your last term for your degree, you may be eligible, and we encourage you to submit an initial application.</li>
-	<li>Outreachy internships are full-time 40-hour a week internships. Applicants who have part-time or contracting jobs are welcome to apply, but they must meet additional requirements.
-</ul>
+{% include 'home/snippet/eligibility_rules.html' %}
 
 <h2>Additional Information to Provide</h2>
 <p>The initial application also includes questions about:</p>
