Remove headings from generic timeline and applicant timeline

--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -17,6 +17,8 @@
 	<p>For the current list of internships, <a href="/apply/project-selection">see the current round page</a></p>
 
 	{% with current_round=page.specific %}
+	<h2>Timeline</h2>
+
 	{% include 'home/snippet/round_timeline.html' %}
 	{% endwith %}
 	{% with current_round=page %}
