Add more content to applicant guide

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -8,5 +8,60 @@ Applicant Guide | Outreachy Documentation
 
 <h1>Outreachy Applicant Guide</h1>
 
+<h2 id='toc'>Table of Contents</h2>
+
+<p>
+<a href='#what-is-outreachy'>What is Outreachy?</a><br>
+<a href='#what-is-free-software'>What is free software and open source?</a></br>
+<a href='#outreachy-schedule'>Outreachy schedule</a><br>
+<a href='#eligibility'>Eligibility</a><br>
+</p>
+
+<hr>
+
+<h2 id='what-is-outreachy'><a href='#what-is-outreachy'>What is Outreachy?</a></h2>
+
+<p>Outreachy is a paid, remote internship program. Outreachy's goal is to support people from groups underrepresented in tech. We help newcomers to free software and open source make their first contributions.</p>
+
+<p>Outreachy provides internships to work open source. People apply from all around the world. Interns work remotely, and are not required to move. Interns are paid a stipend of $5,500 USD for the three month internship. Interns have a $500 USD travel stipend to attend conferences or events.</p>
+
+<p>Interns work with experienced mentors from open source communities. Outreachy internship projects may include programming, user experience, documentation, illustration, graphical design, or data science. Interns often find employment after their internship with Outreachy sponsors or in jobs that use the skills they learned during their internship.</p>
+
+{% include 'home/snippet/diversity_statement.html' %}
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='what-is-free-software'><a href='#what-is-free-software'>What is free software and open source?</a></h2>
+
+<p>Free and Open Source Software (FOSS) is software that gives the user the freedom to use, copy, study, change, and improve it. We encourage you to <a href="https://opensource.com/resources/what-open-source">read an introduction article about open source software</a>.</p>
+
+<p>Open source projects are built collaboratively. Open source contributors work together publicly. Working publicly creates a fun collaborative community around a project. It allows anyone to make innovative changes that reach many people.</p>
+
+<p>Open source contributors work on a lot of different things! You can contribute by developing software. Or you might want to improve user experience by contributing design work. You can help with documentation, community management, marketing, identifying issues and reporting bugs, helping users, event organization, graphic design, and translations.</p>
+
+<p>Sometimes people work on open source in their spare time. Many contributors are employed by companies and non-profit organizations to work on open source. That includes the companies that are sponsoring Outreachy!  Experience with open source is highly valuable in the professional world. Your contributions to open source provide a public portfolio for you. Employers can see your history of public collaboration, which will give them confidence when making hiring decisions.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='outreachy-schedule'><a href='#outreachy-schedule'>Outreachy yearly schedule</a></h2>
+
+<p>Outreachy internships run twice a year. Here is our general schedule for each year:</p>
+
+{% include 'home/snippet/generic_timeline.html' %}
+
+<p><b>{{ current_round.official_name }} round schedule</b></p>
+
+{% include 'home/snippet/round_timeline.html' %}
+
+<hr>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='eligibility'><a href='#eligibility'>Eligibility</a></h2>
+
+{% include 'home/snippet/diversity_statement.html' %}
+
+<h3>Outreachy Eligibility Rules</h3>
+
+<p>These eligibility rules apply to the {{ current_round.official_name }} round. Dates may change for future rounds.</p>
+
+{% include 'home/snippet/eligibility_rules.html' %}
 
 {% endblock %}
