Add links to documentation in various pages

--- a/home/templates/home/docs/toc.html
+++ b/home/templates/home/docs/toc.html
@@ -20,7 +20,7 @@ Table of Contents | Outreachy Documentation
 
 <h2>Outreachy Guides</h2>
 
-<p>Applicant Guide</p>
+<p><a href='{% url 'docs-applicant' %}'>Applicant Guide</a></p>
 <p>Internship Handbook</p>
 <p><a href="/mentor/">Mentor and Coordinator Guide</a></p>
 {% endblock %}
