--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -195,7 +195,7 @@ Outreachy eligibility results
 	Accepted applicants will then move onto the contribution phase. During the contribution phase, applicants make contributions to Outreachy projects.
 	</p>
 	<p>
-	We encourage you to read our applicant and intern documentation while you're waiting for your initial application results.
+	We encourage you to <a href='{% url 'docs' %}'>read our applicant and internship documentation</a> while you're waiting for your initial application results.
 	</p>
 	<p>
 	You submitted your application on {{ application.submission_date }}.
