--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -5,7 +5,7 @@ Applicant Guide | Outreachy Documentation
 {% endblock %}
 
 {% block content %}
-
+<p><a href='{% url 'docs' %}'>← back to Outreachy documentation</a></p>
 <h1>Outreachy Applicant Guide</h1>
 
 <h2 id='toc'>Table of Contents</h2>
