--- a/home/templates/home/docs/toc.html
+++ b/home/templates/home/docs/toc.html
@@ -21,6 +21,6 @@ Table of Contents | Outreachy Documentation
 <h2>Outreachy Guides</h2>
 
 <p><a href='{% url 'docs-applicant' %}'>Applicant Guide</a></p>
-<p>Internship Handbook</p>
+<p><a href='{% url 'docs-internship' %}'>Internship Guide</a></p>
 <p><a href="/mentor/">Mentor and Coordinator Guide</a></p>
 {% endblock %}
