Move headings out of payment schedule snippet

--- a/home/templates/home/dashboard/intern.html
+++ b/home/templates/home/dashboard/intern.html
@@ -116,6 +116,7 @@
 	{% endif %}
 
 	{% with current_round=my_round %}
+		<h2>Intern Payment Schedule</h2>
 		{% include 'home/snippet/payment_schedule.html' %}
 	{% endwith %}
 
