--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -22,6 +22,7 @@
 	{% include 'home/snippet/round_timeline.html' %}
 	{% endwith %}
 	{% with current_round=page %}
+	<h2>Intern Payment Schedule</h2>
 	{% include 'home/snippet/payment_schedule.html' %}
 	{% endwith %}
 	{{ page.specific.sponsordetails|richtext }}
