--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -37,6 +37,7 @@ Outreachy Internships | Apply | Pick a Project
 	<h2>Timeline</h2>
 
 	{% include 'home/snippet/round_timeline.html' %}
+	<h2>Intern Payment Schedule</h2>
 	{% include 'home/snippet/payment_schedule.html' %}
 	{{ current_round.sponsordetails|safe }}
 {% else %}
